<resources>
    <string name="app_name">Potential Growth</string>
    <string name="image">image</string>
    <string name="done_it_today">I have done it today</string>
    <string name="congratulation">Congratulation for your work today !</string>
    <string name="comment">Comment !</string>
    <string name="your_comments">Your comments</string>
    <string name="date_comment">On the %1$s you commented :</string>
    <string name="life_style">Life Style</string>
    <string name="communication">Communication</string>
    <string name="health">Health</string>
    <string name="self_confidence">Self confidence</string>
    <string name="find_yourself">Find yourself</string>
    <string name="cake">cake</string>
    <string name="smile">smile</string>
    <string name="heart">heart</string>
    <string name="people">people</string>
    <string name="thumb_up">thumb up</string>
    <string name="explanation">Work every week on your %1$s skill and your progression for the last 7 days will be displayed !</string>
    <string name="done">Done</string>
    <string name="instruction">Instruction</string>
    <string name="licence">Licence</string>
    <string name="your_dairy">Your dairy</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="write_your_text">Write your text</string>
    <string name="goals">Goals</string>
    <string name="stories">Stories</string>
    <string name="ideas">Ideas</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="date_dairy">On the %1$s you had these :</string>
    <string name="error_dairy_topic">Please select goals or stories or ideas.</string>
    <string name="error_dairy_empty_text">Please write some text.</string>
    <string name="undo">UNDO</string>
    <string name="favorite_deleted">Favorite deleted</string>
  
    <string name="quote_placeholder">\" %1$s \"</string>
    <string name="author_placeholder">- %1$s</string>

    <string name="preference_file">com.alexandre.potentialgrowth.preference_file</string>
    <string name="preference_last_download">com.alexandre.potentialgrowth.preference_last_download</string>
    <string name="preference_has_learned_instruction">com.alexandre.potentialgrowth.preference_has_learned_instruction</string>

    <string name="tuto1">Explore new topics to learn.</string>
    <string name="tuto2">For each topic you can say that you have done it today and had a comment.</string>
    <string name="tuto3">You can add a topic to your favorite by clicking the star.</string>
    <string name="tuto4">For each sections, keep the circle complete by doing it or comment it.</string>
    <string name="tuto5">You can add your Goals, Stories and Ideas in the dairy section.</string>
    <string name="indicator">indicator</string>

    <string name="skip">Skip</string>
</resources>
