<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_instruction"
            android:icon="@drawable/ic_info"
            android:title="@string/instruction" />
        <item
            android:id="@+id/nav_your_dairy"
            android:icon="@drawable/ic_edit"
            android:title="@string/your_dairy" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_licence"
            android:icon="@drawable/ic_copyright"
            android:title="@string/licence" />
    </group>
</menu>